sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:9: error: not found: value x
    (x,y) match {
     ^AlgGnomeSort:9: error: not found: value y
    (x,y) match {
       ^AlgGnomeSort:18: error: not found: value -
      case (true,taille-1) => return
                       ^